@@ -1,3 +1,4 @@
 Remove Sample::computeStandardDeviationPerComponent
 Remove Hanning alias
 Remove ADS alias
+Remove deprecated VisualTest::DrawCobWeb method
